# Opengl-Mathematical-Animations

./: CMakeLists.txt  README.md  main
include/: callback.h  camera.h  circle.h  makeCircleAndSphere.h  shader.h  texture.h
shaders/: axesFrag.glsl  frag.glsl  lightFrag.glsl  vert.glsl
src/: callback.cpp  camera.cpp  main.cpp  makeCircleAndSphere.cpp  shader.cpp  texture.cpp
